--- a/fa/Dockerfile
+++ b/fa/Dockerfile
@@ -1,5 +1,6 @@
 FROM python:3.9-slim
 WORKDIR /app
 COPY . /app
+RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 CMD ["uvicorn", "fst_app:app", "--host", "0.0.0.0", "--port", "8001"]
