--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,5 @@
-name: Deploy to Kubernetes
+---
+name: Deploy to Railway
 
 on:
   push:
@@ -10,19 +11,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      # Sprawdzenie repozytorium
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up Ansible
-      uses: dawidd6/action-ansible-playbook@v2
-      with:
-        playbook: ansible/playbooks/deploy_k8s.yaml
-        inventory: ansible/inventory/hosts.yaml
+      # Instalacja Railway CLI
+      - name: Install Railway CLI
+        run: |
+          npm install -g railway
 
-    - name: Apply Kubernetes manifests
-      uses: azure/k8s-deploy@v3
-      with:
-        manifests: |
-          k8s/manifests/django-deployment.yaml
-          k8s/manifests/fastapi-deployment.yaml
-          k8s/manifests/vault-secret.yaml
+      # Zalogowanie do Railway
+      - name: Login to Railway
+        env:
+          RAILWAY_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}
+        run: |
+          railway login --token $RAILWAY_TOKEN
+
+      # Wykonanie wdrożenia
+      - name: Deploy to Railway
+        run: |
+          railway up --verbose
