--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,14 +18,14 @@ jobs:
       # Instalacja Railway CLI
       - name: Install Railway CLI
         run: |
-          npm install -g railway
+          npm install -g @railway/cli
 
       # Zalogowanie do Railway
       - name: Login to Railway
         env:
-          RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}
+          RAILWAY_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}
         run: |
-          railway login
+          railway login --token $RAILWAY_TOKEN
 
       # Wykonanie wdrożenia
       - name: Deploy to Railway
