--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,9 +23,9 @@ jobs:
       # Zalogowanie do Railway
       - name: Login to Railway
         env:
-          RAILWAY_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}
+          RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}
         run: |
-          railway login --token $RAILWAY_TOKEN
+          railway login
 
       # Wykonanie wdrożenia
       - name: Deploy to Railway
